[gd_scene load_steps=8 format=2]

[ext_resource path="res://Escenas/ParallaxBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://title-screen2.png" type="Texture" id=2]
[ext_resource path="res://Texto/Fuente.tres" type="DynamicFont" id=3]
[ext_resource path="res://Escenas/SeleccionDeNiveles.gd" type="Script" id=4]
[ext_resource path="res://Musica/1_4943166951473021037.ogg" type="AudioStream" id=5]
[ext_resource path="res://Escenas/controlador.tscn" type="PackedScene" id=6]
[ext_resource path="res://boton back.png" type="Texture" id=7]

[node name="SeleccionDeNiveles" type="Node2D" groups=[
"selenive",
]]
script = ExtResource( 4 )

[node name="controlador" parent="." instance=ExtResource( 6 )]

[node name="ParallaxBackground" parent="." instance=ExtResource( 1 )]

[node name="Button" type="Button" parent="."]
margin_left = 1.0
margin_top = 36.0
margin_right = 301.0
margin_bottom = 234.0
focus_mode = 1
action_mode = 0
button_mask = 7
enabled_focus_mode = 1
icon = ExtResource( 2 )
flat = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Button"]
anchor_right = 0.14
margin_left = 72.0
margin_top = 47.0
margin_right = 180.0
margin_bottom = 95.0
rect_scale = Vector2( 1, 2 )
rect_pivot_offset = Vector2( 4, 0 )
custom_fonts/font = ExtResource( 3 )
text = "Level 
1
 "
align = 1
valign = 1
max_lines_visible = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 322.652
margin_top = 37.799
margin_right = 622.652
margin_bottom = 235.799
focus_mode = 1
action_mode = 0
button_mask = 7
enabled_focus_mode = 1
icon = ExtResource( 2 )
flat = true
clip_text = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Button2"]
anchor_right = 0.14
margin_left = 76.0
margin_top = 51.0
margin_right = 184.0
margin_bottom = 99.0
rect_scale = Vector2( 1, 2 )
rect_pivot_offset = Vector2( 4, 0 )
custom_fonts/font = ExtResource( 3 )
text = "Level 
2
 "
align = 1
valign = 1
max_lines_visible = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
margin_left = 656.652
margin_top = 39.799
margin_right = 956.652
margin_bottom = 237.799
focus_mode = 1
action_mode = 0
button_mask = 7
enabled_focus_mode = 1
icon = ExtResource( 2 )
flat = true
clip_text = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Button3"]
anchor_right = 0.14
margin_left = 76.0
margin_top = 51.0
margin_right = 184.0
margin_bottom = 99.0
rect_scale = Vector2( 1, 2 )
rect_pivot_offset = Vector2( 4, 0 )
custom_fonts/font = ExtResource( 3 )
text = "Level 
3
 "
align = 1
valign = 1
max_lines_visible = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = 10.0
autoplay = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 536, 433 )
scale = Vector2( 2.19444, 2.67708 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="Sprite"]
margin_left = -74.0
margin_top = -41.0
margin_right = 67.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 3 )
text = "juega el 
nivel 1 y los
demas niveles
apareceran"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="volver atras" type="Button" parent="."]
margin_left = 8.0
margin_top = 492.0
margin_right = 78.0
margin_bottom = 560.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="volver atras"]
position = Vector2( 36, 34 )
scale = Vector2( 1.82353, 1.9697 )
texture = ExtResource( 7 )
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="volver atras" to="." method="_on_volver_atras_pressed"]
